# mysite

./: .dockerignore  README.md  alembic.ini  dockerfile  pyproject.toml
.github/workflows/: deploy.yml
app/: database.py  main.py
app/chat/: dao.py  models.py  router.py  schemas.py
app/core/: security.py
app/routes/: auth.py  main.py
app/schemas/: user.py
app/static/js/: auth.js  chat.js
app/templates/: auth.html  chat.html
app/users/: models.py  router.py
migration/: env.py
migration/versions/: 001_add_chat_system.py  001_initial_migration.py  001_initial_schema.py
